--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.gprotechnologies.gprodesktop"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 14
-        versionName "1.2"
+        versionCode 15
+        versionName "1.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -38,9 +38,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
     // https://mvnrepository.com/artifact/com.hierynomus/smbj
-//    compile group: 'com.hierynomus', name: 'smbj', version: '0.9.1'
+    //    implementation group: 'com.hierynomus', name: 'smbj', version: '0.9.1'
     implementation 'org.greenrobot:eventbus:3.0.0'
 
+    implementation files('libs/jcifs-1.3.17.jar')
 }
