--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:exported="true"
             >
             <intent-filter>
+                <action android:name="android.intent.action.ACTION_SHUTDOWN"/>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
 
